# Cluster_IM_Server

./: .gitignore  CMakeLists.txt  README.md  build.sh  dbpool.cnf
include/: group_module.hpp  public.hpp
include/server/: chat_server.hpp  chat_service.hpp  friend_module.hpp  group.hpp  group_user.hpp  offline_msg_module.hpp  user.hpp  user_module.hpp
include/server/dao/: connection_pool.hpp  db_connection.hpp  mysql.hpp  redis.hpp
include/server/models/: group.hpp
include/server/modules/: friend_module.hpp  group_module.hpp  offline_msg_module.hpp  user_module.hpp
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chat_server.cpp  chat_service.cpp  group_module.cpp  main.cpp  offline_msg_module.cpp  user_module.cpp
src/server/dao/: connection_pool.cpp  db_connection.cpp  mysql.cpp  redis.cpp
src/server/modules/: friend_module.cpp  group_module.cpp  offline_msg_module.cpp  user_module.cpp
